--- a/templates/region.html
+++ b/templates/region.html
@@ -1,116 +1,226 @@
 {% extends 'index.html' %}
 {% block content %}
-    <script>
-        $(document).ready(function () {
-            makeGuMarker()
+<head>
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
+    <!--naver Maps-->
+    <script type="text/javascript"
+            src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=wgv3kenwp7"></script>
+    <!--naver Maps Submodule Geocode-->
+    <script type="text/javascript"
+            src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=wgv3kenwp7&submodules=geocoder"></script>
+    <script src="../../myproject/static/script.js"></script>
+
+</head>
+
+<nav class="navbar navbar-dark bg-none pb-0">
+    <span class="navbar-brand text-dark mb-0 p-0"><h1>지도로 보기</h1></span>
+</nav>
+
+<div id="map" style="width: inherit;height:800px;position: absolute;overflow: hidden;"></div>
+<script>
+    function onSuccessGeolocation(position) {
+        var locationBtnHtml = '<button href="#">현재위치로</button>';
+        var markers = [];
+        var infoWindows = [];
+
+        //현재 위치 정보 저장
+        var location = new naver.maps.LatLng(position.coords.latitude,
+            position.coords.longitude);
+
+        // 네이버 지도 생성
+        var map = new naver.maps.Map('map', {
+            center: new naver.maps.LatLng(location),
+            zoomControl: true,
+            maxZoom: 18,
+            minZoom: 14,
+            zoom: 15,
+            mapTypeId: naver.maps.MapTypeId.NORMAL
         });
 
-        // 지도에 표시된 마커 객체를 가지고 있을 배열입니다
-        var markers = [];
+        //커스텀 컨트롤
+        naver.maps.Event.once(map, 'init', function () {
+            var customControl = new naver.maps.CustomControl(locationBtnHtml, {
+                position: naver.maps.Position.TOP_RIGHT
+            });
+            customControl.setMap(map);
 
-        // 배열에 추가된 마커들을 지도에 표시하거나 삭제하는 함수입니다
-        function setMarkers(map) {
-            for (var i = 0; i < markers.length; i++) {
-                markers[i].setMap(map);
-            }
-        }
+            naver.maps.Event.addDOMListener(customControl.getElement(), 'click', function () {
+                map.setCenter(new naver.maps.LatLng(location));
+            });
+        })
 
-        // 구 마커 만들기.
-        function makeGuMarker() {
-            // 작업해야할 구
-            const seoul_gus = ["도봉구", "노원구", "강북구", "은평구", "성북구", "중랑구", "동대문구", "종로구", "서대문구",
-                "중구", "성동구", "광진구", "용산구", "마포구", "강서구", "양천구", "구로구", "영등포구", "동작구", "금천구",
-                "관악구", "서초구", "강남구", "송파구", "강동구"]
+        //현재 위치 InfoWindow 생성 및 표시
+        var myLocation = new naver.maps.InfoWindow();
+        myLocation.setContent('<div style="padding:3px;">' + '현재 위치!' + '</div>');
+        myLocation.open(map, location);
 
-            for (let i = 0; i < seoul_gus.length; i++) {
-                // 주소로 좌표를 검색합니다
-                geocoder.addressSearch(seoul_gus[i], function (result, status) {
 
-                    // 정상적으로 검색이 완료됐으면
-                    if (status === kakao.maps.services.Status.OK) {
+        getCurrentLocationData();
 
-                        var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+        function getCurrentLocationData() {
+            markers = [];
+            infoWindows = [];
+            var boundsSW = map.getBounds().getSW()
+            var boundsNE = map.getBounds().getNE()
+            var SW = [boundsSW['x'], boundsSW['y']]
+            var NE = [boundsNE['x'], boundsNE['y']]
+            var center = map.getCenter()
 
-                        // 결과값으로 받은 위치를 마커로 표시합니다
-                        var marker = new kakao.maps.Marker({
+            //Geospatial Index(DB)로 검색하기 위해선 [경도(longtitude),위도(latitude)] 순으로 값을 저장해야함
+            var locationForGeoSearch = [center['x'], center['y']]
+
+            jQuery.ajaxSettings.traditional = true; // ajax로 배열 보낼때 필수 구문
+            $.ajax({
+                type: "POST",
+                url: "/region",
+                async: false,
+                data: {sendDatas: [JSON.stringify({loc: locationForGeoSearch, start: SW, goal: NE})]},
+                success: function (response) {
+                    let datas = response['stores'];
+                    let length = datas.length;
+
+                    for (let i = 0; i < length; i++) {
+                        let address = datas[i]['address']
+                        let category = datas[i]['category']
+                        let name = datas[i]['name']
+                        let img = datas[i]['imgsrc']
+                        let like = datas[i]['like']
+                        let rating = datas[i]['rating']
+                        let point = datas[i]['loc']['coordinates']
+
+                        console.log(address)
+
+                        var contentString = `
+                                    <div class="iw_inner" style="padding:0px 10px 0px 10px;margin:0px">
+                                        <h4 style="text-align: right">${category}</h4>
+                                        <h1>${name}</h1>
+                                        <h4>${address}<br />
+                                            <img src="${img}" height="150" alt="이미지" class="thumb" /><br />
+                                            <div style="color: darkgoldenrod;margin-bottom: 0px">★ : ${rating}</div><div style="color: red">♥: ${like}</div>
+                                        </h4>
+                                    </div>
+                                    `
+                        $('#swiper-wrapper').append(contentString);
+
+                        //마커 생성
+                        var marker = new naver.maps.Marker({
                             map: map,
-                            position: coords
+                            position: point,
+                            zIndex: 100
+                        })
+
+                        //정보창 생성
+                        var infoWindow = new naver.maps.InfoWindow({
+                            content: contentString,
+                            maxWidth: 500,
+                            borderWidth: 3,
+                            backgroundColor:"#eee"
                         });
 
-                        // 인포윈도우로 장소에 대한 설명을 표시합니다
-                        var infowindow = new kakao.maps.InfoWindow({
-                            content: `<div style="width: 150px;text-align: center">${seoul_gus[i]}</div>`
-                        });
-                        infowindow.open(map, marker);
+                        markers.push(marker)
+                        infoWindows.push(infoWindow)
+                    }//for 종료
 
-                        kakao.maps.event.addListener(marker, 'click', function () {
-                            // 해당 구의 맛집 표시하기
-                            $.ajax({
-                                type: "GET",
-                                url: "/region/marker",
-                                data: {},
-                                success: function (response) {
-                                    setMarkers(null);
-                                    let shopdatas = response["shopdatas"]
-                                    for (let n = 0; n < shopdatas.length; n++) {
+                    function getClickHandler(seq) {
+                        return function (e) {
+                            var marker = markers[seq],
+                                infoWindow = infoWindows[seq];
 
-                                        let gu = shopdatas[n]["gu"]
-                                        if (gu === seoul_gus[i]) {
-                                            let address = shopdatas[n]["address"]
-                                            let name = shopdatas[n]["name"]
-                                            let link = shopdatas[n]["link"]
-                                            // 주소로 좌표를 검색합니다
-                                            geocoder.addressSearch(address, function (result, status) {
-
-                                                // 정상적으로 검색이 완료됐으면
-                                                if (status === kakao.maps.services.Status.OK) {
-
-                                                    var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
-
-                                                    // 결과값으로 받은 위치를 마커로 표시합니다
-                                                    var marker = new kakao.maps.Marker({
-                                                        map: map,
-                                                        position: coords,
-                                                        clickable: true
-                                                    });
-
-                                                    // 인포윈도우로 장소에 대한 설명을 표시합니다
-                                                    var infowindow = new kakao.maps.InfoWindow({
-                                                        content: `<div style="width:150px;text-align:center;padding:6px 0;">${name}</div>`
-                                                    });
-
-                                                    kakao.maps.event.addListener(marker, 'mouseover', function () {
-                                                        // 마커에 마우스오버 이벤트가 발생하면 인포윈도우를 마커위에 표시합니다
-                                                        infowindow.open(map, marker);
-                                                    });
-
-                                                    // 마커에 마우스아웃 이벤트를 등록합니다
-                                                    kakao.maps.event.addListener(marker, 'mouseout', function () {
-                                                        // 마커에 마우스아웃 이벤트가 발생하면 인포윈도우를 제거합니다
-                                                        infowindow.close();
-                                                    });
-
-                                                    // 마커에 클릭이벤트를 등록합니다
-                                                    kakao.maps.event.addListener(marker, 'click', function () {
-                                                        // 해당 링크로 이동합니다
-                                                        window.open(`${link}`)
-                                                        ;
-                                                    });
-                                                    // 생성된 마커를 배열에 추가합니다
-                                                    markers.push(marker);
-                                                }
-                                            });
-                                        }
-
-
-                                    }
-                                }
-                            })
-                        });
+                            if (infoWindow.getMap()) {
+                                infoWindow.close();
+                            } else {
+                                infoWindow.open(map, marker);
+                            }
+                        }
                     }
-                });
-            }
+
+                    for (var i = 0, ii = markers.length; i < ii; i++) {
+                        naver.maps.Event.addListener(markers[i], 'click', getClickHandler(i));
+                    }
+
+                }
+            })
         }
+
+        naver.maps.Event.addListener(map, 'idle', function () {
+            for (var i = 0; i < markers.length; i++) {
+                marker = markers[i]
+                hideMarker(map, marker);
+            }
+            getCurrentLocationData();
+        });
+
+        function hideMarker(map, marker) {
+            marker.setMap(null);
+        }
+
+    } // onSuccessGeoLocation 종료
+
+
+    function onErrorGeolocation() {
+        var center = map.getCenter();
+
+        infowindow.setContent('<div style="padding:20px;">' +
+            '<h5 style="margin-bottom:5px;color:#f00;">Geolocation failed!</h5>' + "latitude: " + center.lat() + "<br />longitude: " + center.lng() + '</div>');
+
+        infowindow.open(map, center);
+    }
+
+    $(window).on("load", function () {
+        if (navigator.geolocation) {
+            /**
+             * navigator.geolocation 은 Chrome 50 버젼 이후로 HTTP 환경에서 사용이 Deprecate 되어 HTTPS 환경에서만 사용 가능 합니다.
+             * http://localhost 에서는 사용이 가능하며, 테스트 목적으로, Chrome 의 바로가기를 만들어서 아래와 같이 설정하면 접속은 가능합니다.
+             * chrome.exe --unsafely-treat-insecure-origin-as-secure="http://example.com"
+             */
+            navigator.geolocation.getCurrentPosition(onSuccessGeolocation, onErrorGeolocation);
+        } else {
+            var center = map.getCenter();
+            infowindow.setContent('<div style="padding:20px;"><h5 style="margin-bottom:5px;color:#f00;">Geolocation not supported</h5></div>');
+            infowindow.open(map, center);
+        }
+    })
+
 </script>
-<div id="map" style="width:800px;height:800px;margin: auto"></div>
+
+
+<!-- Slider main container -->
+<!--<div class="swiper">-->
+<!--    &lt;!&ndash; Additional required wrapper &ndash;&gt;-->
+<!--    <div class="swiper-wrapper">-->
+<!--        &lt;!&ndash; Slides &ndash;&gt;-->
+<!--        <div class="swiper-slide">Slide 1</div>-->
+<!--        ...-->
+<!--    </div>-->
+<!--    &lt;!&ndash; If we need pagination &ndash;&gt;-->
+<!--    <div class="swiper-pagination"></div>-->
+
+<!--    &lt;!&ndash; If we need navigation buttons &ndash;&gt;-->
+<!--    <div class="swiper-button-prev"></div>-->
+<!--    <div class="swiper-button-next"></div>-->
+
+<!--    &lt;!&ndash; If we need scrollbar &ndash;&gt;-->
+<!--    <div class="swiper-scrollbar"></div>-->
+<!--</div>-->
+
+<!--<script>-->
+<!--    const swiper = new Swiper('.swiper', {-->
+<!--        // Optional parameters-->
+<!--        direction: 'horizontal',-->
+<!--        loop: true,-->
+
+<!--        // If we need pagination-->
+<!--        pagination: {-->
+<!--            el: '.swiper-pagination',-->
+<!--        },-->
+
+<!--        // Navigation arrows-->
+<!--        navigation: {-->
+<!--            nextEl: '.swiper-button-next',-->
+<!--            prevEl: '.swiper-button-prev',-->
+<!--        },-->
+<!--    });-->
+<!--</script>-->
 {% endblock %}
